# SimsReiaParser

./: LICENSE  README.md
.github/workflows/: python-application.yml  python-library.yml  release-app.yml
ReiaTool/: README.md  pyproject.toml
ReiaTool/reiatool/: reiatool.py
SimsReiaPy/: README.md  pyproject.toml
SimsReiaPy/sims_reia/: ReiaFile.py  ReiaFrame.py  __init__.py  encoder.py
SimsReiaPy/tests/: ReiaFile_test.py  ReiaFrame_test.py  encoder_test.py
SimsReiaPy/tests/test_data/: README.md
