[project]
requires-python = ">=3.9"
name = "sims_reia"

[tool.poetry]
version = "0.1.2"
description = ""
authors = ["Ammar Askar <ammar@ammaraskar.com>"]
readme = "README.md"
homepage = "https://github.com/ammaraskar/SimsReiaParser"
repository = "https://github.com/ammaraskar/SimsReiaParser/tree/main/SimsReiaPy"

[tool.poetry.dependencies]
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
